--- a/page2.html
+++ b/page2.html
@@ -1,1 +1,28 @@
 
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Respuesta</title>
+    <style>
+        body {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            font-family: Arial, sans-serif;
+            background-color: #ffe4e1;
+            color: #ff69b4;
+        }
+
+        h1 {
+            font-size: 3em;
+        }
+    </style>
+</head>
+<body>
+    <h1>¡Yo también te amo!</h1><br>
+    <img src="ositos.jpeg" width="300"/> <br>
+</body>
+</html>
