--- a/proyect.html
+++ b/proyect.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -43,11 +42,54 @@
             color: white;
             position: relative;
         }
+
+        /* Estilos para la imagen con corazones */
+        .image-container {
+            position: relative;
+            display: inline-block;
+        }
+
+        .image-container img {
+            border-radius: 10px;
+        }
+
+        .heart {
+            color: #ff69b4;
+            font-size: 24px;
+            position: absolute;
+        }
+
+        /* Posicionando los corazones alrededor de la imagen */
+        .heart.top-left {
+            top: -20px;
+            left: -20px;
+        }
+
+        .heart.top-right {
+            top: -20px;
+            right: -20px;
+        }
+
+        .heart.bottom-left {
+            bottom: -20px;
+            left: -20px;
+        }
+
+        .heart.bottom-right {
+            bottom: -20px;
+            right: -20px;
+        }
     </style>
 </head>
 <body>
     <h1>¿Me amas?</h1>
-    <img src="mejee.jpeg" width="300"/> <br>
+    <div class="image-container">
+        <span class="heart top-left">❤️</span>
+        <span class="heart top-right">❤️</span>
+        <span class="heart bottom-left">❤️</span>
+        <span class="heart bottom-right">❤️</span>
+        <img src="mejee.jpeg" width="300"/> <br>
+    </div>
     <div class="button-container">
         <button id="yes" class="button" onclick="showLove()">Sí</button>
         <button id="no" class="button" onmouseover="moveButton()">No</button>
@@ -55,8 +97,7 @@
 
     <script>
         function showLove() {
-            // Aquí puedes poner el enlace de destino
-            window.location.href = "file:///Users/franciscoespinoza/Documents/html/jeje/jeje.html"; // Cambia esto por la URL deseada
+            window.location.href = "file:///Users/franciscoespinoza/Documents/html/jeje/jeje.html";
         }
 
         function moveButton() {
