--- a/proyect.html
+++ b/proyect.html
@@ -57,37 +57,35 @@
             color: #ff69b4;
             font-size: 24px;
             position: absolute;
+            transform: rotate(0deg);
         }
 
-        /* Posicionando los corazones alrededor de la imagen */
-        .heart.top-left {
-            top: -20px;
-            left: -20px;
-        }
-
-        .heart.top-right {
-            top: -20px;
-            right: -20px;
-        }
-
-        .heart.bottom-left {
-            bottom: -20px;
-            left: -20px;
-        }
-
-        .heart.bottom-right {
-            bottom: -20px;
-            right: -20px;
-        }
+        /* Posicionando y rotando los corazones alrededor de la imagen */
+        .heart1 { top: -20px; left: -20px; transform: rotate(-15deg); }
+        .heart2 { top: -20px; left: 50px; transform: rotate(10deg); }
+        .heart3 { top: -20px; right: -20px; transform: rotate(-5deg); }
+        .heart4 { top: 50px; left: -20px; transform: rotate(5deg); }
+        .heart5 { bottom: -20px; left: -20px; transform: rotate(-10deg); }
+        .heart6 { bottom: -20px; right: -20px; transform: rotate(15deg); }
+        .heart7 { bottom: 50px; right: -20px; transform: rotate(-20deg); }
+        .heart8 { top: 50px; right: -20px; transform: rotate(10deg); }
+        .heart9 { bottom: -20px; left: 50px; transform: rotate(-5deg); }
     </style>
 </head>
 <body>
     <h1>¿Me amas?</h1>
     <div class="image-container">
-        <span class="heart top-left">❤️</span>
-        <span class="heart top-right">❤️</span>
-        <span class="heart bottom-left">❤️</span>
-        <span class="heart bottom-right">❤️</span>
+        <!-- Corazones alrededor de la imagen -->
+        <span class="heart heart1">❤️</span>
+        <span class="heart heart2">❤️</span>
+        <span class="heart heart3">❤️</span>
+        <span class="heart heart4">❤️</span>
+        <span class="heart heart5">❤️</span>
+        <span class="heart heart6">❤️</span>
+        <span class="heart heart7">❤️</span>
+        <span class="heart heart8">❤️</span>
+        <span class="heart heart9">❤️</span>
+        
         <img src="mejee.jpeg" width="300"/> <br>
     </div>
     <div class="button-container">
